--- a/summit2017-wc-mc-polymer-client/app/index.html
+++ b/summit2017-wc-mc-polymer-client/app/index.html
@@ -88,8 +88,8 @@
             <section data-route="books">
               <paper-material elevation="1">
                 <div class="layout wrap inline center-top">
-                <tc-books style="width: 250px;" id="tc-books" requestUrl="http://localhost:2000/books"></tc-books>
-                <tc-book-form id="tc-book-form" requestUrl="http://localhost:4000/books"></tc-book-form>
+                <tc-books style="width: 250px;" id="tc-books" request-url="http://localhost:2000/books"></tc-books>
+                <tc-book-form id="tc-book-form" request-url="http://localhost:4000/books"></tc-book-form>
                 </div>
               </paper-material>
             </section>
