Added basic transclusion example with web component technology

--- a/polymer-client/app/index.html
+++ b/polymer-client/app/index.html
@@ -28,7 +28,7 @@
   <link rel="import" href="elements/elements.html">
   <!-- endreplace-->
 
-  <link rel="import" href="/components/tc-books/tc-books.html">
+  <link rel="import" href="/components/tc-books/<tc-books></tc-books>.html">
   <link rel="import" href="/components/tc-books/tc-book-form.html">
 </head>
 
